--- a/nav.css
+++ b/nav.css
@@ -4,14 +4,13 @@
 }
 
 .body {
+    display: grid;
+    grid-template-rows: 1fr 9fr;
     margin: 0px;
     padding: 0px;
 }
 
 .nav {
-    position: absolute;
-    top: 0;
-    left: 0;
     display: grid;
     grid-row: 1;
     grid-template-columns: 1fr 1fr 1fr 6fr 2fr 1fr;
@@ -21,6 +20,8 @@
     margin: 0;
     padding: 0;
     place-items: center;
+    /* debugging */
+    border: 2px solid red;
 }
 
 #gmdb {
@@ -30,6 +31,7 @@
     font-weight: 1;
     padding-left: 1%;
     padding-right: 1%;
+    /* debugging */
     /* background-color: aqua; */
 
 }
@@ -43,6 +45,7 @@
     padding-right: 1%;
     padding-top: 1%;
     padding-bottom: 1%;
+    /* debugging */
     /* background-color: rgb(98, 255, 0); */
 
 }
@@ -56,6 +59,7 @@
     padding-right: 1%;
     padding-top: 1%;
     padding-bottom: 1%;
+    /* debugging */
     /* background-color: blue; */
 }
 
@@ -82,3 +86,45 @@
     border-color: rgb(255, 200, 0);
     background-color: transparent;
 }
+
+.main {
+    grid-row: 2;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 4fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    /* debugging */
+    border: 2px solid greenyellow;
+}
+
+#login-text {
+    grid-row: 1;
+    grid-column: 2;
+    align-self: center;
+    justify-self: center;
+    font-family: Helvetica, sans-serif;
+    /* debugging */
+    border: 2px solid blue
+}
+
+#email {
+    grid-row: 2;
+    grid-column: 2;
+    /* debugging */
+    border: 2px solid blue
+}
+
+#password {
+    grid-row: 3;
+    grid-column: 2;
+    /* debugging */
+    border: 2px solid blue
+}
+
+#login-button {
+    grid-row: 4;
+    grid-column: 2;
+    /* debugging */
+    border: 2px solid blue
+}
+
+
